--- a/voom-app/app/src/main/res/values/strings.xml
+++ b/voom-app/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
-    <string name="app_name">VoomApp</string>
+    <string name="app_name">Voom</string>
+    <string name="nav_home">Home</string>
+    <string name="nav_services">Services</string>
+    <string name="nav_activity">Activity</string>
+    <string name="nav_profile">Profile</string>
 </resources>
