feat: shared navigation - home item in nav takes back to login - profile item takes to driver/user profile - activity item takes to driver ride history
fix:
- small layout change in item_ride
- added @string

--- a/voom-app/app/src/main/res/values/strings.xml
+++ b/voom-app/app/src/main/res/values/strings.xml
@@ -46,5 +46,10 @@
     <string name="vehicle_info">Vehicle info</string>
     <string name="driver_profile">Driver profile\n</string>
     <string name="driver_profile_page">Driver profile page</string>
-
+    <string name="distance_placeholder">Distance: 5.2km</string>
+    <string name="activity">Activity</string>
+    <string name="clear_filters">Clear Filters</string>
+    <string name="apply_filter">APPLY FILTER</string>
+    <string name="sort">Sort</string>
+    <string name="select_dates">Select date range for filtering</string>
 </resources>
