--- a/voom-app/app/src/main/res/values/strings.xml
+++ b/voom-app/app/src/main/res/values/strings.xml
@@ -52,4 +52,10 @@
     <string name="apply_filter">APPLY FILTER</string>
     <string name="sort">Sort</string>
     <string name="select_dates">Select date range for filtering</string>
+    <string name="status_active">Active</string>
+    <string name="status_inactive">Inactive</string>
+    <string name="today">Today</string>
+    <string name="date_today">Tuesday, September 1, 2025</string>
+    <string name="rides_today">Rides today: 10</string>
+    <string name="money_earned">Money earned: $115.23</string>
 </resources>
