--- a/voom-app/app/src/main/res/values/strings.xml
+++ b/voom-app/app/src/main/res/values/strings.xml
@@ -60,4 +60,5 @@
     <string name="money_earned">Money earned: $115.23</string>
     <string name="upload_image">Upload profile image</string>
     <string name="profile_image_preview">Profile image preview</string>
+    <string name="change_vehicle_information">Change vehicle information\n</string>
 </resources>
