--- a/voom-app/app/src/main/res/values/strings.xml
+++ b/voom-app/app/src/main/res/values/strings.xml
@@ -61,4 +61,5 @@
     <string name="upload_image">Upload profile image</string>
     <string name="profile_image_preview">Profile image preview</string>
     <string name="change_vehicle_information">Change vehicle information\n</string>
+    <string name="activate_account">Activate account</string>
 </resources>
