--- a/voom-app/app/src/main/res/values/strings.xml
+++ b/voom-app/app/src/main/res/values/strings.xml
@@ -63,4 +63,5 @@
     <string name="profile_image_preview">Profile image preview</string>
     <string name="change_vehicle_information">Change vehicle information\n</string>
     <string name="activate_account">Activate account</string>
+    <string name="nav_statistics">Statistics</string>
 </resources>
