--- a/voom-app/app/src/main/res/values/strings.xml
+++ b/voom-app/app/src/main/res/values/strings.xml
@@ -71,4 +71,5 @@
     <string name="accept_ride">Accept Ride</string>
     <string name="you_have_arrived_at_the_pickup_location">You have arrived at the pickup location.</string>
     <string name="arrived_at_pickup">Arrived at Pickup</string>
+    <string name="create_password">Create Password\n</string>
 </resources>
