feat: update ride history dialog

--- a/voom-app/app/src/main/res/values/strings.xml
+++ b/voom-app/app/src/main/res/values/strings.xml
@@ -74,4 +74,5 @@
     <string name="create_password">Create Password\n</string>
     <string name="date_to">Date to</string>
     <string name="date_from">Date from</string>
+    <string name="ride">Ride</string>
 </resources>
