clean up in bottom navigations

--- a/voom-app/app/src/main/res/values/strings.xml
+++ b/voom-app/app/src/main/res/values/strings.xml
@@ -3,8 +3,9 @@
     <string name="voom_logo">Voom logo</string>
     <string name="nav_home">Home</string>
     <string name="nav_services">Services</string>
-    <string name="nav_tracking">Active Ride</string>
-    <string name="nav_activity">Activity</string>
+    <string name="nav_tracking">Activity</string>'
+    <string name="nav_scheduled">Scheduled</string>
+    <string name="nav_activity">History</string>
     <string name="nav_profile">Profile</string>
     <string name="create_new_account">Create new account</string>
     <string name="have_an_account">Already have an account?</string>
